# shtops

./: .gitignore  FIX_AMI_IPV6_ISSUE.md  FREEPBX_AMI_IMPLEMENTATION.md  FREEPBX_AMI_SOLUTION.md  FREEPBX_AMI_TROUBLESHOOTING.md  README.md  VISION.md  debug_ami.py  fix_ami_ipv4.sh  freepbx_ami_helper.sh  pyproject.toml  requirements.txt  test_freepbx_ami.py  test_llm_integration.py
automation/: README.md
automation/systemd/: shtops-collect.service  shtops-collect.timer
clients/: README.md  diagnose_freepbx_api.py  explore_freepbx_schema.py  freepbx_client.py  freepbx_client_old.py  hudu_client.py  librenms_client.py  llm_client.py  proxmox_client.py  test_freepbx_connection.py  unifi_client.py
collectors/: README.md
collectors/freepbx/: README.md  __init__.py  collect.py  collect_old.py
collectors/librenms/: README.md  __init__.py  collect.py
collectors/proxmox/: README.md  __init__.py  collect.py
collectors/unifi/: __init__.py  collect.py
config/: config.example.yaml  config.yaml  shtops.code-workspace
dashboard/: README.md  app.py
docs/: IMPLEMENTATION_STATUS.md  LLM_INTEGRATION.md  QUICKSTART_LLM.md  README.md
scripts/: README.md  hudu_sync.py
shtops/: __init__.py  cache.py  cli.py  config.py  hudu_sync.py  inventory.py  status.py
